Replace styled-components with CSS Modules.
Also fix 306 npm vulnerabilities.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
         "intersection-observer": "^0.7.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-helmet": "^5.2.1",
-        "styled-components": "^4.3.2"
+        "react-helmet": "^5.2.1"
     },
     "devDependencies": {
         "prettier": "^1.18.2"
