--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
         "animate.css": "^3.7.2",
-        "gatsby": "^2.13.9",
-        "gatsby-background-image": "^0.8.0",
-        "gatsby-image": "^2.2.4",
-        "gatsby-plugin-manifest": "^2.2.4",
-        "gatsby-plugin-react-helmet": "^3.1.0",
-        "gatsby-plugin-sharp": "^2.2.3",
-        "gatsby-plugin-typography": "^2.3.2",
-        "gatsby-source-filesystem": "^2.1.2",
-        "gatsby-transformer-json": "^2.2.2",
-        "gatsby-transformer-remark": "^2.6.9",
-        "gatsby-transformer-sharp": "^2.2.1",
+        "gatsby": "^2.15.1",
+        "gatsby-background-image": "^0.8.7",
+        "gatsby-image": "^2.2.15",
+        "gatsby-plugin-manifest": "^2.2.12",
+        "gatsby-plugin-react-helmet": "^3.1.5",
+        "gatsby-plugin-sharp": "^2.2.18",
+        "gatsby-plugin-typography": "^2.3.5",
+        "gatsby-source-filesystem": "^2.1.18",
+        "gatsby-transformer-json": "^2.2.6",
+        "gatsby-transformer-remark": "^2.6.19",
+        "gatsby-transformer-sharp": "^2.2.12",
+        "hamburgers": "^1.1.3",
         "intersection-observer": "^0.7.0",
-        "react": "^16.8.6",
+        "react": "^16.9.0",
         "react-aria-menubutton": "^6.1.0",
-        "react-dom": "^16.8.6",
+        "react-dom": "^16.9.0",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.7.0",
         "react-slick": "^0.24.0",
@@ -38,7 +39,7 @@
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
-        "LAN": "echo 'gatsby develop -H 192.168.1.90 -p 8000'",
+        "LAN": "echo 'gatsby develop -H 84.217.192.215 -p 8000'",
         "format": "prettier --write src/**/*.{js,jsx}",
         "start": "npm run develop",
         "serve": "gatsby serve",
